Clean up jvm args